--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1st git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="d1">
         <h1>My 1st git repo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos molestiae quibusdam aliquid exercitationem voluptatibus ut quod, blanditiis ea eveniet, minus similique suscipit corrupti excepturi, incidunt placeat libero a obcaecati officia!</p>
+    </div>
+
+    <div class="d1">
+        <h1>My 1st git repo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos molestiae quibusdam aliquid exercitationem voluptatibus ut quod, blanditiis ea eveniet, minus similique suscipit corrupti excepturi, incidunt placeat libero a obcaecati officia!</p>
+    </div>
+
+    <div class="d1">
+        <h1>My 1st git repo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos molestiae quibusdam aliquid exercitationem voluptatibus ut quod, blanditiis ea eveniet, minus similique suscipit corrupti excepturi, incidunt placeat libero a obcaecati officia!</p>
     </div>
 </body>
 </html>
